[package]
name = "pam_groupmap"
version = "0.1.3"
authors = ["Nikolay Denev <ndenev@gmail.com>"]
description = "PAM Service module allowing to map users based on LDAP group membership"
homepage = "https://github.com/ndenev/pam_groupmap"
repository = "https://github.com/ndenev/pam_groupmap"
keywords = ["pam", "pam-service-module", "ldap", "active-directory"]
categories = ["authentication", "os"]
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "ndenev/pam_groupmap" }

[lib]
name = "pam_groupmap"
crate-type = ["cdylib"]

[dependencies]
toml = "0.4.2"
serde = "1.0.8"
serde_derive = "1.0.8"
libc = "0.2.24"
ldap3 = "0.5"
rand = "0.3.15"

#[profile.release]
#debug = true

